Fix mobile button appearance on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -633,7 +633,6 @@ blockquote {
         justify-content: center;
         color: rgb(245 245 245);
         width: auto;
-        height: 56px;
         text-decoration: none;
         margin: 2em 0;
     }
